<resources>
    <string name="app_name">Mobilki</string>
    <string name="email_hint">Email …</string>
    <string name="password_hint">Password …</string>
    <string name="log_in">Log in</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="reset_password">Reset password</string>
    <string name="register">Register</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="create_account">Create an account</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="productname">productName</string>
    <string name="eatenBtn">Eaten</string>
    <string name="exit">Exit</string>
    <string name="click_back_again_to_exit">Click back again to exit app</string>
    <string name="repeat_pass_hint">Repeat password…</string>
    <string name="side_menu_background_content_desc">side menu background</string>
    <string name="profile_image_desc">Profile image</string>
    <string name="product_image_desc">Product image</string>
    <string name="username_hint">Enter username …</string>
    <string name="age_hint">Enter age (years)</string>
    <string name="weight_hint">Enter weight (kg)</string>
    <string name="height_hint">Enter height (cm)</string>
    <string name="radMan">Male</string>
    <string name="radFem">Female</string>
    <string name="confirm_configuration">Confirm account configuration</string>
    <string name="back">Back</string>
    <string name="select_image_desc">Select image</string>
    <string name="calories_progress">0%</string>
    <string name="carbohydrate_progress">0%</string>
    <string name="protein_progress">0%</string>
    <string name="fat_progress">0%</string>
    <string name="czy_zjad_e_te_posi_ki_z_aktualnie_obserwowanej_diety">Have you eaten meals from the currently observed diet?</string>
    <string name="eaten_meals_label">Eaten meals</string>
    <string name="Log_in_to_add_meals">Log in to add eaten meals</string>
    <string name="add_meal_label">Add meal</string>
    <string name="products">products</string>
    <string name="search">Search …</string>
    <string name="add_product">Add product</string>
    <string name="liked">Liked</string>
    <string name="vegetarion">Vegetarian</string>
    <string name="GlutenfFree">Gluten free</string>
    <string name="disliked">disliked</string>
    <string name="vegan">vegan</string>
    <string name="allBtn">all</string>
    <string name="product_name_hint">Product name …</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten free</string>
    <string name="calories_hint">Calories (in 100 grams)</string>
    <string name="carbohydrates_hint">Carbohydrates (grams)</string>
    <string name="proteins_hint">Proteins (grams)</string>
    <string name="fats_hint">Fats (grams)</string>
    <string name="remove_product">Remove product</string>
    <string name="SearchBtnDesc">Search button</string>
    <string name="select_product_image_button_desc">Select product image button</string>
    <string name="like_button_desc">like button</string>
    <string name="dislike_button_desc">dislike button</string>
    <string name="product_name">product_name</string>
    <string name="product_calories">product_calories</string>
    <string name="meals">Meals</string>
    <string name="add_meal">Add meal</string>
    <string name="product_meal_hint">Meal name …</string>
    <string name="approve_meal">Approve meal</string>
    <string name="remove_meal">Remove meal</string>
    <string name="meal_weight_hint">Weight (grams)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="diets">Diets</string>
    <string name="add_diet">Add diet</string>
    <string name="name_diet_hint">Diet name …</string>
    <string name="Diet_desc">Diet description …</string>
    <string name="Meal_list_hint">Aded meals will show up here</string>
    <string name="calories_0">Calories: 0</string>
    <string name="carbohydrates_0">Carbohydrates: 0</string>
    <string name="proteins_0">Proteins: 0</string>
    <string name="fat_0">Fat: 0</string>
    <string name="add_another_day">Add another day</string>
    <string name="save_diet">Save diet</string>
    <string name="diet_desc">Diet description</string>
    <string name="meals_first_day">Meals in day: 1</string>
    <string name="previous_day">Previous day</string>
    <string name="next_day">Next day</string>
    <string name="write_comment">Write comment …</string>
    <string name="add_rating">Add rating</string>
    <string name="observe_diet">Observe diet</string>
    <string name="diet_remove">Remove diet</string>
    <string name="settings">Settings</string>
    <string name="log_in_to_change_account_settings">Log in to change account settings</string>
    <string name="user_name">User name:</string>
    <string name="age">Age:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="diet_image_select_button">Diet Image select button</string>
    <string name="single_diet_image">Single diet image</string>
    <string name="select_meal_image_button">Select meal image button</string>
    <string name="single_meal_image">Single meal image</string>
    <string name="settings_button">Settings button</string>
    <string name="diet_image">Diet image</string>
    <string name="rating_image">Rating image</string>
    <string name="diet_name">diet_name</string>
    <string name="rating_name">rating name</string>
    <string name="textview">TextView</string>
</resources>