<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_products"
            android:title="@string/products"
            android:icon="@drawable/ic_apple"/>


        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_meals"
            android:title="@string/meals" />

        <!--

        <item
            android:id="@+id/nav_diets"
            android:title="@string/diets"
            android:icon="@drawable/ic_diets"/>

        <item
            android:id="@+id/nav_followed"
            android:title="@string/followed"
            android:icon="@drawable/ic_users"/>


        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
         -->

        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"/>

    </group>

</menu>

