<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ProductSingleActivity">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:contentDescription="@string/product_image_desc" />

            <TextView
                android:id="@+id/SingleProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/product_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vegetarianLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:text="@string/vegetarian"
                android:visibility="gone" />

            <TextView
                android:id="@+id/veganLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:text="@string/vegan"
                android:visibility="gone" />

            <TextView
                android:id="@+id/glutenFreeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:text="@string/gluten_free"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Singlecalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/calories_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/Singlecarbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/carbohydrates_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/Singleproteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/proteins_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/Singlefat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fats_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp" />

            <Button
                android:id="@+id/productRemoveBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/remove_product"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>