<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DietAddActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/dietImageSelectBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:adjustViewBounds="true"
                android:maxHeight="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:contentDescription="@string/diet_image_select_button" />

            <EditText
                android:id="@+id/DietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/name_diet_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/DietDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/Diet_desc"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/AddedMeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/Meal_list_hint"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/caloriesField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/calories_0" />

                <TextView
                    android:id="@+id/carbohydratesField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/carbohydrates_0"
                     />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/proteinsField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:text="@string/proteins_0"
                    />

                <TextView
                    android:id="@+id/fatField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fat_0"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/AddMealToDietBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_meal" />

            <Button
                android:id="@+id/NextDayAddBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/add_another_day"
                android:visibility="gone" />

            <Button
                android:id="@+id/DietAcceptBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="5dp"
                android:text="@string/save_diet"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>