<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealSingleActivity">




    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/SingleMealImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:scaleType="fitXY"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:contentDescription="@string/single_meal_image" />

            <TextView
                android:id="@+id/SingleMealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/product_meal_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vegetarianMealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/vegetarian"
                android:visibility="gone" />

            <TextView
                android:id="@+id/veganMealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/vegan"
                android:visibility="gone" />

            <TextView
                android:id="@+id/glutenFreeMealLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/purple_500"
                android:textColor="@color/white"
                android:padding="10dp"
                android:text="@string/gluten_free"
                android:visibility="gone" />

            <TextView
                android:id="@+id/SingleMealCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/calories_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/SingleMealCarbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/carbohydrates_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/SingleMealProteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/proteins_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/SingleMealFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fats_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productListM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/mealRemoveBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/remove_meal"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>