<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/SetupImageBtn"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@android:drawable/ic_menu_gallery"
                android:contentDescription="@string/select_image_desc" />

            <EditText
                android:id="@+id/setupNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/setupAgeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/age_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/setupWeightField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:hint="@string/weight_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/setupHeightField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/height_hint"
                android:inputType="number"
                android:minHeight="48dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:importantForAutofill="no" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:checked="true"
                    android:text="@string/radMan" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/radFem" />
            </RadioGroup>

            <Button
                android:id="@+id/setupSubmitBtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="15dp"
                android:text="@string/confirm_configuration" />

            <Button
                android:id="@+id/logOutbtn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/log_out" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>