<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MealAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/mealImageSelectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/select_meal_image_button" />

        <EditText
            android:id="@+id/MealName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/product_meal_hint"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/AddProductToMealBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add_product" />

        <Button
            android:id="@+id/acceptBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/approve_meal"
            android:visibility="invisible" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>